derive/tests/snapshots/unique_multi_column_index/Seat/get_all_seats.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `seat` table.
    pub fn get_all_seats<'a>(&'a self) -> impl Iterator<Item = Seat> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().seat().iter()
    }
}
