derive/tests/snapshots/unique_multi_column_index/Seat/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct SeatId {
    value: u64,
}
impl Default for SeatId {
    fn default() -> SeatId {
        SeatId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for SeatId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "SeatId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64, SeatId> for SeatId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Seat> for SeatId {
    fn from(value: &Seat) -> Self {
        SeatId { value: value.id.clone() }
    }
}
impl From<&Seat> for Option<SeatId> {
    fn from(value: &Seat) -> Option<SeatId> {
        Some(SeatId { value: value.id.clone() })
    }
}
impl From<&SeatId> for Option<SeatId> {
    fn from(value: &SeatId) -> Option<SeatId> {
        use crate::spacetimedsl::Wrapper;
        Some(SeatId::new(value.value()))
    }
}
impl From<&SeatId> for SeatId {
    fn from(value: &SeatId) -> Self {
        use crate::spacetimedsl::Wrapper;
        SeatId::new(value.value())
    }
}
impl Seat {
    ///
    pub fn get_id(&self) -> SeatId {
        use crate::spacetimedsl::Wrapper;
        SeatId::new(self.id.clone())
    }
    ///
    pub fn get_row_id(&self) -> &u64 {
        use crate::spacetimedsl::Wrapper;
        &self.row_id
    }
    ///
    pub fn get_row_id_mut(&mut self) -> &mut u64 {
        use crate::spacetimedsl::Wrapper;
        &mut self.row_id
    }
    ///
    pub fn set_row_id(&mut self, row_id: u64) -> u64 {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.row_id, row_id);
        old_value
    }
    ///
    pub fn get_number(&self) -> &u32 {
        use crate::spacetimedsl::Wrapper;
        &self.number
    }
    ///
    pub fn get_number_mut(&mut self) -> &mut u32 {
        use crate::spacetimedsl::Wrapper;
        &mut self.number
    }
    ///
    pub fn set_number(&mut self, number: u32) -> u32 {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.number, number);
        old_value
    }
}
///
pub struct CreateSeat {
    pub row_id: u64,
    pub number: u32,
}

// Generated DSL methods:
// count_of_all_seats
// create_seat
// delete_seat_by_id
// delete_seat_by_row_and_number
// get_all_seats
// get_seat_by_id
// get_seat_by_row_and_number
// update_seat_by_id
